# va-signals-v2

./: .crontab  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  EXPERT-1-ARCHITECTURE.md  EXPERT-2-INTELLIGENCE-PIPELINE.md  EXPERT-3-RESILIENCE.md  EXPERT-4-COGNITIVE.md  EXPERT-5-MATHEMATICS.md  FULL-SPECTRUM-ADVANCEMENT-PLAN.md  Makefile  README.md  install_cron_macos.sh  pyproject.toml  requirements-dev.txt  requirements.dashboard.txt  requirements.txt  schema.postgres.sql  schema.sql
.claude/: settings.json
.cursor/plans/: authority-layer-signals_50b3f945.plan.md  authority-layer-signals_52f14006.plan.md  boris_claude_code_workflow_b8513e41.plan.md  committee-press-agent.plan.md  congressional-record-agent.plan.md
.github/workflows/: canary-deploy.yml  daily_fr_delta.yml  lint.yml  security-scan.yml
config/: approved_sources.yaml  correlation_rules.yaml  source_expectations.yaml
config/signals/: claims_operations.yaml  legislative_action.yaml  oversight_accountability.yaml  regulatory_change.yaml
docs/: CROSS_BROWSER_TESTING.md  DECISIONS.md  DISASTER_RECOVERY.md  HOTEL_endpoint_inventory.md  backlog.md  cron-newsyslog-macos.md  data_quality_known_limitations.md
docs/doctrine/: INDEX.md
docs/governance/: AI_USAGE_POLICY.md
docs/ops/: runbook.md
docs/plans/: 2025-01-20-va-bills-tracker-design.md  2025-01-20-va-hearings-tracker-design.md  2026-01-21-oversight-monitor-design.md  2026-01-21-oversight-monitor-impl.md  2026-01-21-signals-routing-impl.md  2026-01-21-signals-routing-layer-design.md  2026-01-21-state-intelligence-design.md  2026-01-21-state-intelligence-impl.md  2026-01-22-operational-design-campaign-plan.md  2026-01-22-phase1-execution-log.md  2026-01-26-hosting-auth-design.md  2026-01-26-hosting-auth-impl.md  2026-02-06-multi-perspective-assessment.md  2026-02-06-sprint1-wiring-and-parallelization.md  2026-02-06-sprint2-schemas-health-parallelization.md  CAMPAIGN-QUICKREF.md  test-coverage-analysis.md
docs/validation/: FAIL_CLOSED.md
infrastructure/: README.md  RUNBOOK_ROLLBACK.md  backup-database.sh  canary-deploy.sh  cloud-run-with-prometheus.yaml  configure-cloud-dns.sh  configure-dns-ssl.sh  configure-monitoring.sh  configure-secrets.sh  deploy-cloud-run.sh  restore-database.sh  zap-baseline-rules.tsv  zap-config.yaml
migrations/: 001_add_fr_date_columns.py  002_add_trend_tables.py  003_ensure_all_tables.py  004_add_multi_tenant_tables.py  005_add_lda_tables.py  006_add_ml_score_columns.py  007_add_staleness_tables.py  008_add_compound_signals.py  009_cleanup_data_quality.py
schemas/: heat_map.schema.json  impact_memo.schema.json  objection.schema.json  signal.schema.json  source_expectations.schema.json  source_run.schema.json
scripts/: backfill_bill_committees.py  backfill_fr_dates.py  backfill_om_ml_scores.py  backfill_om_themes.py  backfill_state_notifications.py  backfill_state_programs.py  cleanup_logs.py  cleanup_test_contamination.py  diagnose_source_health.py  migrate_sqlite_to_postgres.py  run_trend_aggregation.py  run_zap_scan.sh  verify_deployment.sh
src/: agenda_drift.py  dashboard_api.py  db.py  embed_utterances.py  fetch_bills.py  fetch_fr_ping.py  fetch_hearings.py  fetch_lda.py  fetch_omb_guidance.py  fetch_omb_internal_drop.py  fetch_reginfo_pra.py  fetch_transcripts.py  fetch_va_pubs.py  fetch_whitehouse.py  fr_bulk.py  fr_details.py  llm_config.py  notify_email.py  notify_slack.py  provenance.py  reports.py  run_agenda_drift.py  run_authority_docs.py  run_battlefield.py  run_bills.py  run_ecfr_delta.py  run_fr_delta.py  run_hearings.py  run_lda.py  run_oversight.py  run_signals.py  secrets.py  summarize.py
src/auth/: __init__.py  api.py  audit.py  firebase_config.py  middleware.py  models.py  rbac.py  schema.sql
src/battlefield/: __init__.py  api.py  calendar.py  db_helpers.py  gate_detection.py  integrations.py  models.py  signal_bridge.py
src/ceo_brief/: __init__.py  aggregator.py  analyst.py  api.py  db_helpers.py  generator.py  integrations.py  runner.py  schema.py
src/db/: __init__.py  ad.py  authority.py  bills.py  compound.py  core.py  fr.py  hearings.py  helpers.py  lda.py
src/evidence/: __init__.py  alpha_integration.py  api.py  dashboard_routes.py  delta_integration.py  extractors.py  generator.py  models.py  validator.py
src/ml/: __init__.py  api.py  features.py  models.py  scoring.py
src/oversight/: __init__.py  db_helpers.py  runner.py
src/resilience/: __init__.py  api.py  canary.py  retry.py  (+7 more)
tests/: conftest.py  test_bill_committees.py  test_compound_api.py  test_correlator_pipeline.py  test_data_quality_cleanup.py  test_db_backend.py  test_db_crud.py  test_db_integrity.py  test_env_config.py  test_fetch_error_handling.py  test_gate_detection.py  test_lda.py  test_llm_config.py  test_migration_script.py  test_ml_router_registration.py  test_notify_slack_format.py  test_provenance_gate.py  test_reports.py  test_run_agenda_drift.py  test_run_authority_docs.py  test_run_battlefield.py  test_run_bills.py  test_run_ecfr_delta.py  test_run_fr_delta.py  test_run_hearings.py  test_run_oversight.py  test_schema_parity.py  test_ssl_context.py  test_staleness_monitor.py
(+233 files in other folders)
