[project]
name = "va-signals"
version = "2.0.0"
description = "VA Signals & Indicators Intelligence System"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=45",  # Ratcheted from 35→45 for Sprint 6 STABILIZE
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "playwright: marks tests as browser-based Playwright tests (requires running server)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__pycache__/*",
    "tests/*",
    "**/conftest.py",
    "src/state/sources/*_official.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | htmlcov
  | outputs
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "migrations/",
    "scripts/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "htmlcov",
    "outputs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from in except (pre-existing pattern)
    "B905",  # zip-without-strict (pre-existing pattern)
    "B005",  # strip-with-multi-characters (pre-existing pattern)
    "E402",  # module-level import not at top (pre-existing pattern)
    "UP042", # str-enum mixin, use StrEnum (pre-existing pattern)
]

[tool.ruff.lint.per-file-ignores]
"src/db/__init__.py" = ["F401"]           # re-exports
"src/auth/firebase_config.py" = ["F401"]  # conditional imports

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
